test/data/resolver/valid/remove_labels_declared.cypher
MATCH (n:Person) REMOVE n:Draft RETURN n
