test/data/resolver/invalid/remove_labels_undeclared.cypher
MATCH (n:Person) REMOVE n:Nonexistent RETURN n
